--- a/templates/header.html
+++ b/templates/header.html
@@ -41,9 +41,9 @@
           <li class="nav-item">
             <a class="nav-link" href="{{ url_for('add_cafe') }}">Add Cafe</a>
           </li>
-<!--          <li class="nav-item">-->
-<!--            <a class="nav-link" href="/login">Login</a>-->
-<!--          </li>-->
+          <li class="nav-item">
+            <a class="nav-link" href="{{ url_for('show_all_cafes') }}">All Cafes</a>
+          </li>
         </ul>
       </div>
     </div>
