added contact form using smtp library, added environmental variables, marked self-written code in CSS file, added comments to code

--- a/static/scss/_contact.scss
+++ b/static/scss/_contact.scss
@@ -1,3 +1,4 @@
+//THIS CODE WAS COMPLETELY TAKEN FROM THE TEMPLATE
 // Styling for the contact page
 .floating-label-form-group {
   font-size: 14px;
