--- a/static/scss/_masthead.scss
+++ b/static/scss/_masthead.scss
@@ -1,3 +1,4 @@
+//THIS CODE WAS COMPLETELY TAKEN FROM THE TEMPLATE
 // Styling for the masthead
 header.masthead {
   // TIP: Background images are set within the HTML using inline CSS!
