--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,4 +1,4 @@
-  <!-- Footer -->
+<!--CODE FOR THE DEFAULT FOOTER, ADDED TO EVERY HTML FILE-->
   <footer>
     <div class="container">
       <div class="row">
