--- a/static/scss/_mixins.scss
+++ b/static/scss/_mixins.scss
@@ -1,3 +1,4 @@
+//THIS CODE WAS COMPLETELY TAKEN FROM THE TEMPLATE
 // Mixins
 // Bootstrap Button Variant
 @mixin button-variant($color, $background, $border) {
