--- a/templates/all_cafes.html
+++ b/templates/all_cafes.html
@@ -1,4 +1,4 @@
-<!--SHOW ALL INFORMATION ABOUT THE REQUESTED CAFE-->
+<!--TABLE WITH DETAILED INFORMATION ABOUT EACH CAFE IN THE DB-->
 {% include "header.html" %}
 
 <header class="masthead" style="background-image: url('https://images.unsplash.com/photo-1581259021841-a16d7c2a777d?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1157&q=80')">
@@ -7,28 +7,30 @@
 		<div class="row">
 			<div class="col-lg-8 col-md-10 mx-auto">
 				<div class="post-heading">
-					<h1>{{cafe.name}}</h1>
+					<h1>Cafes in Banff</h1>
                 </div>
             </div>
         </div>
     </div>
 </header>
 
-
-<div class="container">
-    <div class="row"><div class="col-lg-8 col-md-10 mx-auto">
-        <table>
-            <tbody>
+<div class="container-fluid">
+    <table>
+        <tbody>
             <tr>
-                <td>🧭 Address:</td>
+                <th>Name</th>
+                <th>🧭 Address</th>
+                <th>🕒 Opening Times</th>
+                <th>📶 WiFi</th>
+                <th>🔌 Sockets</th>
+                <th>⛰️ Views</th>
+            </tr>
+            <!-- calls all Cafes from DB and creates table rows with the info-->
+            {% for cafe in all_cafes %}
+            <tr>
+                <td><a class="cafe-name" href="{{url_for('show_cafe', cafe_id=cafe.id)}}">{{cafe.name}}</a></td>
                 <td><a href="{{cafe.maps_url}}">{{cafe.location}}</a></td>
-            </tr>
-            <tr>
-                <td>🕒 Opening Times:</td>
                 <td>{{cafe.open}} - {{cafe.close}}</td>
-            </tr>
-            <tr>
-                <td>📶 WiFi:</td>
                 <td>{% if cafe.wifi == 1: %}
                     ✔️
                     {% elif cafe.wifi == 0: %}
@@ -37,9 +39,6 @@
                     N/A
                     {% endif %}
                 </td>
-            </tr>
-            <tr>
-                <td>🔌 Sockets:</td>
                 <td>{% if cafe.sockets == 1:%}
                     ✔️
                     {% elif cafe.sockets == 0: %}
@@ -48,9 +47,6 @@
                     N/A
                     {% endif %}
                 </td>
-            </tr>
-            <tr>
-                <td>⛰️ Views:</td>
                 <td>{% if cafe.mountain_views == 1:%}
                     ✔️
                     {% elif cafe.mountain_views == 0: %}
@@ -60,15 +56,9 @@
                     {% endif %}
                 </td>
             </tr>
-            </tbody>
-        </table>
-        <br>
-    </div>
-    </div>
-    <div class="row">
-        <div class="col-lg-6 col-md-6 mx-auto text-center"><a class="btn btn-primary" href="{{cafe.maps_url}}">Back to all Cafes</a>
-        </div>
-    </div>
+            {% endfor %}
+        </tbody>
+    </table>
 </div>
 
 <hr>
