--- a/templates/header.html
+++ b/templates/header.html
@@ -1,3 +1,5 @@
+<!--CODE FOR THE DEFAULT HEADER, ADDED TO EVERY HTML FILE-->
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -25,7 +27,7 @@
 
 <body>
 
-  <!-- Navigation -->
+  <!-- Navigation bar-->
   <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
     <div class="container">
 <!--      <a class="navbar-brand" href="index.html">Cafe and Wifi</a>-->
@@ -43,6 +45,9 @@
           </li>
           <li class="nav-item">
             <a class="nav-link" href="{{ url_for('show_all_cafes') }}">All Cafes</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{{ url_for('contact') }}">Contact</a>
           </li>
         </ul>
       </div>
