--- a/templates/header.html
+++ b/templates/header.html
@@ -16,12 +16,12 @@
   <link href="{{ url_for('static', filename='vendor/bootstrap/css/bootstrap.min.css') }}" rel="stylesheet">
 
   <!-- Custom fonts for this template -->
-  <link href="{{ url_for('static', filename='vendor/fontawesome-free/css/all.min.css')}}" rel="stylesheet" type="text/css">
+  <link href="{{ url_for('static', filename='vendor/fontawesome-free/css/all.min.css') }}" rel="stylesheet" type="text/css">
   <link href='https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
 
   <!-- Custom styles for this template -->
-  <link href="{{ url_for('static', filename='css/clean-blog.min.css')}}" rel="stylesheet">
+  <link href="{{ url_for('static', filename='css/clean-blog.min.css') }}" rel="stylesheet">
 
 </head>
 
@@ -48,6 +48,9 @@
           </li>
           <li class="nav-item">
             <a class="nav-link" href="{{ url_for('contact') }}">Contact</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="https://documenter.getpostman.com/view/26061389/2s93sc4CKn">API</a>
           </li>
         </ul>
       </div>
