--- a/templates/cafe.html
+++ b/templates/cafe.html
@@ -21,7 +21,7 @@
             <tbody>
             <tr>
                 <td>🧭 Address:</td>
-                <td><a href="{{ cafe.maps_url }}">{{ cafe.location }}</a></td>
+                <td><a href="{{ cafe.maps_url }}" target="_blank">{{ cafe.location }}</a></td>
             </tr>
             <tr>
                 <td>🕒 Opening Times:</td>
@@ -66,6 +66,9 @@
     </div>
     </div>
     <div class="row">
+        <div class="col-lg-6 col-md-6 mx-auto text-center">
+            <a class="btn btn-primary" href="{{ url_for ('update_cafe') }}">Update Cafe</a>
+        </div>
         <div class="col-lg-6 col-md-6 mx-auto text-center">
             <a class="btn btn-primary" href="{{ url_for ('show_overview') }}">Back to all Cafes</a>
         </div>
