--- a/templates/header.html
+++ b/templates/header.html
@@ -30,11 +30,6 @@
   <!-- Navigation bar-->
   <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
     <div class="container">
-<!--      <a class="navbar-brand" href="index.html">Cafe and Wifi</a>-->
-<!--      <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">-->
-<!--        Menu-->
-<!--        <i class="fas fa-bars"></i>-->
-<!--      </button>-->
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
@@ -50,7 +45,7 @@
             <a class="nav-link" href="{{ url_for('contact') }}">Contact</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="https://documenter.getpostman.com/view/26061389/2s93sc4CKn">API</a>
+            <a class="nav-link" href="https://documenter.getpostman.com/view/26061389/2s93sc4CKn" target="_blank">API</a>
           </li>
         </ul>
       </div>
