add sign in and login, add DB for user reviews and users, add review option when signed in, add admin-only decorator, add admin only routes to see users and comments and ability to delete

--- a/templates/add.html
+++ b/templates/add.html
@@ -24,7 +24,7 @@
 <div class="container">
   <div class="row">
     <div class="col-lg-8 col-md-10 mx-auto">
-          <!-- adds the CafeForm created in main.py, turns off browser default validation messages-->
+          <!-- adds the CafeForm created in forms.py, turns off browser default validation messages-->
          {{ wtf.quick_form(form, novalidate = True) }}
     </div>
   </div>
