--- a/templates/cafe.html
+++ b/templates/cafe.html
@@ -66,38 +66,52 @@
             </tr>
             </tbody>
         </table>
-        <br>
     </div>
     </div>
     <div class="row">
-        <div class="col-lg-6 col-md-6 mx-auto text-center">
-            <a class="btn btn-primary" href="{{ url_for ('update_cafe') }}">Update Cafe</a>
-        </div>
-        <div class="col-lg-6 col-md-6 mx-auto text-center">
-            <a class="btn btn-primary" href="{{ url_for ('show_overview') }}">Back to all Cafes</a>
-        </div>
+        {% if current_user.id == 1: %}
+            <div class="col-lg-4 col-md-4 mx-auto text-center">
+                <a class="btn btn-primary" href="{{ url_for ('update_cafe') }}">Update Cafe</a>
+            </div>
+            <div class="col-lg-4 col-md-4 mx-auto text-center">
+                <a class="btn btn-primary" href="{{url_for('delete_cafe', cafe_id=cafe.id)}}">Delete Cafe</a>
+             </div>
+            <div class="col-lg-4 col-md-4 mx-auto text-center">
+                <a class="btn btn-primary" href="{{ url_for ('show_overview') }}">Back to all Cafes</a>
+            </div>
+        {% else: %}
+            <div class="col-lg-6 col-md-6 mx-auto text-center">
+                <a class="btn btn-primary" href="{{ url_for ('update_cafe') }}">Update Cafe</a>
+            </div>
+            <div class="col-lg-6 col-md-6 mx-auto text-center">
+                <a class="btn btn-primary" href="{{ url_for ('show_overview') }}">Back to all Cafes</a>
+            </div>
+        {% endif %}
     </div>
-    <br>
-    <br>
     <hr>
     <br>
-    <br>
      <h3> Reviews:</h3>
+    <hr>
     <div class="row">
-        <div class="col-lg-8 col-md-10 mx-auto comment">
-
-          {% for comment in cafe.comments: %}
-              <ul class="commentList">
-                  <hr>
+        <div class="col-lg-8 col-md-10 mx-auto">
+          {% for review in cafe.reviews: %}
+              <ul class="reviewList">
                 <li>
-                    <div class="commentText">
-                      <p>{{comment.text | safe}}</p>
-                      <span class="date sub-text">{{comment.comment_author}}</span>
+                    <div class="reviewText">
+                      <p>{{review.text | safe}}</p>
+                      <span class="sub-text">
+                          {{review.review_author.name}}  |
+                      {{review.date}}
+                      </span>
+                      {% if current_user.id == 1: %}
+                        <a href="{{url_for('delete_review', review_id=review.id) }}">✘</a>
+                      {% endif %}
                     </div>
                 </li>
-                  <hr>
+              <hr class="list-inline">
               </ul>
-            {% endfor %}
+          {% endfor %}
+
         </div>
     </div>
     <hr>
