--- a/templates/header.html
+++ b/templates/header.html
@@ -36,9 +36,6 @@
             <a class="nav-link" href="/">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="{{ url_for('add_cafe') }}">Add Cafe</a>
-          </li>
-          <li class="nav-item">
             <a class="nav-link" href="{{ url_for('show_all_cafes') }}">All Cafes</a>
           </li>
           <li class="nav-item">
@@ -47,6 +44,28 @@
           <li class="nav-item">
             <a class="nav-link" href="https://documenter.getpostman.com/view/26061389/2s93sc4CKn" target="_blank">API</a>
           </li>
+          {% if not current_user.is_authenticated: %}
+          <li class="nav-item">
+            <a class="nav-link" href="{{ url_for('login') }}">Login</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{{ url_for('sign_up') }}">Sign Up</a>
+          </li>
+          {% else: %}
+          <li class="nav-item">
+            <a class="nav-link" href="{{ url_for('add_cafe') }}">Add Cafe</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{{ url_for('logout') }}">Logout</a>
+          </li>
+          {% endif %}
+          {% if current_user.id == 1: %}
+          <li class="nav-item">
+            <a class="nav-link" href="{{ url_for('show_users') }}">Show Users</a>
+          </li>
+          {% endif %}
+
+
         </ul>
       </div>
     </div>
