change size of headings

--- a/templates/add.html
+++ b/templates/add.html
@@ -16,6 +16,10 @@
             <h1>New Cafe</h1>
             <span class="subheading">Share your favourite Cafe with us!</span>
           </div>
+          <div class="sub-text">
+            <p>Photo by <a href="https://unsplash.com/@louispaulin">Louis Paulin</a> on
+              <a href="https://unsplash.com/">Unsplash</a></p>
+          </div>
         </div>
       </div>
   </div>
