--- a/templates/index.html
+++ b/templates/index.html
@@ -2,18 +2,23 @@
 {% include "header.html" %}
 
 
-  <header class="masthead" style="background-image: url('https://images.unsplash.com/photo-1447933601403-0c6688de566e?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1061&q=80)">
+  <header class="masthead" style="background-image: url('https://images.unsplash.com/photo-1515696955266-4f67e13219e8?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1171&q=80')">
     <div class="overlay"></div>
     <div class="container">
       <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
           <div class="site-heading">
             <h1>Coffee, Wifi and Mountain Views</h1>
-            <span class="subheading">The best work and study-friendly cafes in Banff, AB. <hr>
+            <span class="subheading">The best work and study-friendly Cafes in Banff, AB. <br> <br>
               Find delicious coffee, snacks and WiFi paired with stunning mountain views. </span>
+          </div>
+          <div class="sub-text">
+            <p>Photo by <a href="https://unsplash.com/@nate_dumlao">Nathan Dumlao</a> on
+              <a href="https://unsplash.com/">Unsplash</a></p>
           </div>
         </div>
       </div>
+    </div>
     </div>
   </header>
 
