--- a/templates/sign-up.html
+++ b/templates/sign-up.html
@@ -7,7 +7,7 @@
 {% block content %}
 {% include "header.html" %}
 
-<header class="masthead" style="background-image: url('https://images.unsplash.com/photo-1558597879-04d6dfc5216d?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1170&q=80')">
+<header class="masthead" style="background-image: url('https://images.unsplash.com/photo-1570309465543-17326ed60c76?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1171&q=80')">
   <div class="overlay"></div>
     <div class="container">
       <div class="row">
@@ -15,6 +15,10 @@
           <div class="page-heading">
             <h1>Sign Up</h1>
             <span class="subheading">Sign up to be able to add Cafes and comment</span>
+          </div>
+          <div class="sub-text">
+            <p>Photo by <a href="https://unsplash.com/@andyjh07">Andy Holmes</a> on
+            <a href="https://unsplash.com/">Unsplash</a></p>
           </div>
         </div>
       </div>
