--- a/templates/user-reviews.html
+++ b/templates/user-reviews.html
@@ -6,8 +6,12 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-lg-8 col-md-10 mx-auto">
-				<div class="post-heading">
+				<div class="page-heading">
 					<h1>Reviews by {{user.name}}</h1>
+                </div>
+                <div class="sub-text">
+                <p>Photo by <a href="https://unsplash.com/@louispaulin">Louis Paulin</a> on
+                  <a href="https://unsplash.com/">Unsplash</a></p>
                 </div>
             </div>
         </div>
